[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybersec-openenv"
version = "1.0.0"
description = "CyberSec-OpenEnv: SOC log analysis environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.27.0",
    "openai>=1.40.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
server = "server.app:main"
cybersec-server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["cybersec_openenv", "cybersec_openenv.env", "server"]

[tool.setuptools.package-data]
"server" = ["templates/*.html", "static/*.css"]

[tool.setuptools.package-dir]
"cybersec_openenv" = "."
"cybersec_openenv.env" = "env"
"server" = "server"
